@@ -5,6 +5,7 @@ Jump Start Changelog
 -----
 
 * Darkened body text in WordPress page editor.
+* Added "tb_square_medium" crop size, 500x500.
 * Fixed issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.
 
 --------------------------------------------------------------
